Bug:  PRD Reviewer:  Self Comments:  Changes for GWT based binder views.  {219th} 1. Fixed styling of task loading/populating messages on IE.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -3013,7 +3013,11 @@ a.gwtTaskToolsButton_WidgetAnchor:hover
 	margin-top: 5px;
 	margin-left: 5px;
 	white-space: nowrap;
-	display: inline-block;
+	display: inline;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	position: relative;
+	top: 5px;
 }
 .gwtTaskList_newTaskMenu_Link {
 }
